fix: fix aligncenter class

--- a/less/partials/content.less
+++ b/less/partials/content.less
@@ -145,6 +145,11 @@
         filter:brightness(90%);
     }
 
+    .aligncenter {
+        margin-left : auto;
+        margin-right: auto;
+    }
+
     .info {
         border : 1px solid @color-background-dark;
         margin : @padding-normal 0;
@@ -348,11 +353,6 @@
                 margin : @padding-small auto;
                 display: block;
             }
-        }
-
-        div.aligncenter {
-            margin-left : auto;
-            margin-right: auto;
         }
 
         .gallery {
