--- a/less/partials/menu.less
+++ b/less/partials/menu.less
@@ -2,6 +2,11 @@
     margin-bottom: @padding-normal;
 
     .menu {
+        width      : 100%;
+        margin     : 0;
+        padding    : 10px 0;
+        white-space: nowrap;
+
         .menu-item {
             list-style    : none;
             .no-margin-no-padding;
@@ -41,7 +46,7 @@
 @media screen and (min-width: @breakpoint-big) {
     #menu {
         .menu {
-            .no-margin-no-padding;
+            overflow-x: hidden;
 
             .menu-item {
                 a,
@@ -60,10 +65,6 @@
 @media screen and (max-width: @breakpoint-big) {
     #menu {
         .menu {
-            width                     : 100%;
-            margin                    : 0;
-            padding                   : 10px 0;
-            white-space               : nowrap;
             -webkit-overflow-scrolling: touch;
             overflow                  : -moz-scrollbars-horizontal;
             overflow-x                : scroll;
@@ -75,6 +76,10 @@
                 a:link,
                 a:visited {
                     margin-right: (@padding-tiny);
+                }
+
+                &:first-of-type {
+                    margin-left: 0;
                 }
             }
         }
